Package_Tools/include-C/gst/123_in_arbeit/sdp/gstmikey.pp


function gst_mikey_payload_t_set(payload:PGstMIKEYPayload; _type:TGstMIKEYTSType; ts_value:Pguint8):Tgboolean;cdecl;external;
{*
 * GstMIKEYPayloadSPParam:
 * @type: specifies the type of the parameter
 * @len: specifies the length of @val
 * @val: specifies the value of the parameter
 *
 * A Type/Length/Value field for security parameters
  }
type
  PGstMIKEYPayloadSPParam = ^TGstMIKEYPayloadSPParam;
  TGstMIKEYPayloadSPParam = record
      _type : Tguint8;
      len : Tguint8;
      val : Pguint8;
    end;
{*
 * GstMIKEYSecProto:
 * @GST_MIKEY_SEC_PROTO_SRTP: SRTP
 *
 * Specifies the security protocol
  }

  PGstMIKEYSecProto = ^TGstMIKEYSecProto;
  TGstMIKEYSecProto =  Longint;
  Const
    GST_MIKEY_SEC_PROTO_SRTP = 0;
;
{*
 * GstMIKEYSecSRTP:
 * @GST_MIKEY_SP_SRTP_ENC_ALG: Encryption algorithm
 * @GST_MIKEY_SP_SRTP_ENC_KEY_LEN: Session Encr. key length
 * @GST_MIKEY_SP_SRTP_AUTH_ALG: Authentication algorithm
 * @GST_MIKEY_SP_SRTP_AUTH_KEY_LEN: Session Auth. key length
 * @GST_MIKEY_SP_SRTP_SALT_KEY_LEN: Session Salt key length
 * @GST_MIKEY_SP_SRTP_PRF: SRTP Pseudo Random Function
 * @GST_MIKEY_SP_SRTP_KEY_DERIV_RATE: Key derivation rate
 * @GST_MIKEY_SP_SRTP_SRTP_ENC: SRTP encryption off/on, 0 if off, 1 if on
 * @GST_MIKEY_SP_SRTP_SRTCP_ENC: SRTCP encryption off/on, 0 if off, 1 if on
 * @GST_MIKEY_SP_SRTP_FEC_ORDER: sender's FEC order
 * @GST_MIKEY_SP_SRTP_SRTP_AUTH: SRTP authentication off/on, 0 if off, 1 if on
 * @GST_MIKEY_SP_SRTP_AUTH_TAG_LEN: Authentication tag length
 * @GST_MIKEY_SP_SRTP_SRTP_PREFIX_LEN: SRTP prefix length
 * @GST_MIKEY_SP_SRTP_AEAD_AUTH_TAG_LEN: AEAD authentication tag length (Since: 1.16)
 *
 * This policy specifies the parameters for SRTP and SRTCP
  }
type
  PGstMIKEYSecSRTP = ^TGstMIKEYSecSRTP;
  TGstMIKEYSecSRTP =  Longint;
  Const
    GST_MIKEY_SP_SRTP_ENC_ALG = 0;
    GST_MIKEY_SP_SRTP_ENC_KEY_LEN = 1;
    GST_MIKEY_SP_SRTP_AUTH_ALG = 2;
    GST_MIKEY_SP_SRTP_AUTH_KEY_LEN = 3;
    GST_MIKEY_SP_SRTP_SALT_KEY_LEN = 4;
    GST_MIKEY_SP_SRTP_PRF = 5;
    GST_MIKEY_SP_SRTP_KEY_DERIV_RATE = 6;
    GST_MIKEY_SP_SRTP_SRTP_ENC = 7;
    GST_MIKEY_SP_SRTP_SRTCP_ENC = 8;
    GST_MIKEY_SP_SRTP_FEC_ORDER = 9;
    GST_MIKEY_SP_SRTP_SRTP_AUTH = 10;
    GST_MIKEY_SP_SRTP_AUTH_TAG_LEN = 11;
    GST_MIKEY_SP_SRTP_SRTP_PREFIX_LEN = 12;
    GST_MIKEY_SP_SRTP_AEAD_AUTH_TAG_LEN = 20;
;
{*
 * GstMIKEYPayloadSP:
 * @pt: the payload header
 * @policy: the policy number
 * @proto: the security protocol
 * @params: array of #GstMIKEYPayloadSPParam
 *
 * The Security Policy payload defines a set of policies that apply to a
 * specific security protocol
  }
type
  PGstMIKEYPayloadSP = ^TGstMIKEYPayloadSP;
  TGstMIKEYPayloadSP = record
      pt : TGstMIKEYPayload;
      policy : Tguint;
      proto : TGstMIKEYSecProto;
      params : PGArray;
    end;

function gst_mikey_payload_sp_set(payload:PGstMIKEYPayload; policy:Tguint; proto:TGstMIKEYSecProto):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mikey_payload_sp_get_n_params(payload:PGstMIKEYPayload):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_mikey_payload_sp_get_param(payload:PGstMIKEYPayload; idx:Tguint):PGstMIKEYPayloadSPParam;cdecl;external;
function gst_mikey_payload_sp_remove_param(payload:PGstMIKEYPayload; idx:Tguint):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mikey_payload_sp_add_param(payload:PGstMIKEYPayload; _type:Tguint8; len:Tguint8; val:Pguint8):Tgboolean;cdecl;external;
{*
 * GstMIKEYPayloadRAND:
 * @pt: the payload header
 * @len: the length of @rand
 * @rand: random values
 *
 * The RAND payload consists of a (pseudo-)random bit-string
  }
type
  PGstMIKEYPayloadRAND = ^TGstMIKEYPayloadRAND;
  TGstMIKEYPayloadRAND = record
      pt : TGstMIKEYPayload;
      len : Tguint8;
      rand : Pguint8;
    end;
(* Const before type ignored *)

function gst_mikey_payload_rand_set(payload:PGstMIKEYPayload; len:Tguint8; rand:Pguint8):Tgboolean;cdecl;external;
{*
 * GstMIKEYKeyDataType:
 * @GST_MIKEY_KD_TGK: a TEK Generation Key
 * @GST_MIKEY_KD_TEK: Traffic-Encrypting Key
 *
 * The type of key.
  }
type
  PGstMIKEYKeyDataType = ^TGstMIKEYKeyDataType;
  TGstMIKEYKeyDataType =  Longint;
  Const
    GST_MIKEY_KD_TGK = 0;
    GST_MIKEY_KD_TEK = 2;
;
{*
 * GstMIKEYKVType:
 * @GST_MIKEY_KV_NULL: No specific usage rule
 * @GST_MIKEY_KV_SPI: The key is associated with the SPI/MKI
 * @GST_MIKEY_KV_INTERVAL: The key has a start and expiration time
 *
 * The key validity type
  }
type
  PGstMIKEYKVType = ^TGstMIKEYKVType;
  TGstMIKEYKVType =  Longint;
  Const
    GST_MIKEY_KV_NULL = 0;
    GST_MIKEY_KV_SPI = 1;
    GST_MIKEY_KV_INTERVAL = 2;
;
{*
 * GstMIKEYPayloadKeyData:
 * @pt: the payload header
 * @key_type: the #GstMIKEYKeyDataType of @key_data
 * @key_len: length of @key_data
 * @key_data: the key data
 * @salt_len: the length of @salt_data, can be 0
 * @salt_data: salt data
 * @kv_type: the Key Validity type
 * @kv_len: length of @kv_data
 * @kv_data: key validity data
 *
 * The Key data payload contains key material. It should be added as sub
 * payload to the KEMAC.
  }
type
  PGstMIKEYPayloadKeyData = ^TGstMIKEYPayloadKeyData;
  TGstMIKEYPayloadKeyData = record
      pt : TGstMIKEYPayload;
      key_type : TGstMIKEYKeyDataType;
      key_len : Tguint16;
      key_data : Pguint8;
      salt_len : Tguint16;
      salt_data : Pguint8;
      kv_type : TGstMIKEYKVType;
      kv_len : array[0..1] of Tguint8;
      kv_data : array[0..1] of Pguint8;
    end;
(* Const before type ignored *)

function gst_mikey_payload_key_data_set_key(payload:PGstMIKEYPayload; key_type:TGstMIKEYKeyDataType; key_len:Tguint16; key_data:Pguint8):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mikey_payload_key_data_set_salt(payload:PGstMIKEYPayload; salt_len:Tguint16; salt_data:Pguint8):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mikey_payload_key_data_set_spi(payload:PGstMIKEYPayload; spi_len:Tguint8; spi_data:Pguint8):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_mikey_payload_key_data_set_interval(payload:PGstMIKEYPayload; vf_len:Tguint8; vf_data:Pguint8; vt_len:Tguint8; vt_data:Pguint8):Tgboolean;cdecl;external;
{*
 * GstMIKEYMessage:
 * @version: the version
 * @type: the #GstMIKEYType message type
 * @V: verify flag
 * @prf_func: a #GstMIKEYPRFFunc
 * @CSB_id: Identifies the Crypto Session Bundle
 * @map_type: a #GstMIKEYMapType
 * @map_info: map info array of type depending on @map_type
 * @payloads: the payload array of #GstMIKEYPayload
 *
 * Structure holding the information of the MIKEY message
  }
{ < private >  }
{ < public >  }
type
  PGstMIKEYMessage = ^TGstMIKEYMessage;
  TGstMIKEYMessage = record
      mini_object : TGstMiniObject;
      version : Tguint8;
      _type : TGstMIKEYType;
      V : Tgboolean;
      prf_func : TGstMIKEYPRFFunc;
      CSB_id : Tguint32;
      map_type : TGstMIKEYMapType;
      map_info : PGArray;
      payloads : PGArray;
    end;

